# python_utilities

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
meshes/: axes.json  black_dashed_circle.json  cyan_dashed_arrow.json  dashed_axes.json  magenta_dashed_arrow.json  quadrotor.json  red_dashed_arrow.json  toycar.json  yellow_dashed_arrow.json  yellow_dashed_circle.json
pylib/: logging_tools.py  transform_plotting.py
src/utils_plugins/: logging.cpp  quat.cpp  support.cpp  xform.cpp
tests/: test_drone_rendering.py  test_logging.py  test_quat.py  test_quat_rpy.py  test_support.py  test_xform.py
